--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     ],
     "require": {
         "php": ">7.1",
-		"uppes/coroutine": "*"
+		"uppes/coroutine": "^0.1.1"
     },
     "autoload": {
         "psr-4": {
