--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ php:
 matrix:
     allow_failures:
         - php: 7.0
+        - php: 7.2
+        - php: 7.3
         - php: 7.4
     fast_finish: true
 
